fixing modal not showing on tablet

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10360,7 +10360,9 @@ body {
 }
 
 .hero.is-login .logo {
-    background: #232d3b
+    background: #232d3b;
+    /* background: whitesmoke; */
+
 }
 
 .hero.is-login .title {
@@ -11058,7 +11060,7 @@ p.help.is-danger {
     font-family: Hind, sans-serif;
     font-weight: 600;
     font-size: 24px;
-    color: #fff
+    color: #0000FF;
 }
 
 .brand-text .suffix {
