--- a/public/css/front.css
+++ b/public/css/front.css
@@ -504,7 +504,7 @@ img {
     z-index: -2
 }
 
-.divider, .pricing-bg {
+.divider, .dividerone, .pricing-bg {
     position: absolute;
     z-index: -1;
     left: 0
@@ -612,11 +612,25 @@ img {
     transform: rotate(-2deg)
 }
 
+.dividerone {
+    width: 100%;
+    -webkit-transform: rotate(2deg);
+    transform: rotate(2deg)
+}
+.dividerone .gradient {
+    width: 100%;
+    height: 40px;
+    background: #f6f6f6;
+    /* background: linear-gradient(to bottom, #f6f6f6 0, #fff 100%) */
+    background: linear-gradient(to bottom, #f6f6f6 0, rgb(79, 21, 155) 100%)
+
+}
+
 .divider .gradient {
     width: 100%;
     height: 40px;
     background: #f6f6f6;
-    background: linear-gradient(to bottom, #f6f6f6 0, #fff 100%)
+    background: linear-gradient(to bottom, #f6f6f6 0, #2962FF 100%)
 }
 
 .pricing-bg {
